factored to clean some areas and redid some of the documenation as well