@@ -21,7 +21,7 @@ import java.util.List;
  */
 public class QuickTimeReaderSpi implements MovieReaderSpi {
 
-    private final static List<String> extensions = Collections.unmodifiableList(Arrays.asList(new String[]{"mov"}));
+    private final static List<String> extensions = List.of(new String[]{ "mov" });
 
     @Override
     public QuickTimeReader create(ImageInputStream in) throws IOException {
